# smart-stay

backend/: README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.bat  setup_tests.bat  setup_tests.sh
backend/src/: config.py  database.py  main.py  models.py  schemas.py  utils.py  ws.py
backend/src/routers/: access_logs.py  auth.py  dashboard.py  face_embeddings.py  gate.py  residents.py  verification.py  ws_router.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_device_sync.py  test_face_embeddings.py  test_residents.py
firmware/: README.md  main.ino
frontend/: README.md  env.d.ts  package-lock.json  package.json
frontend/app/: routes.ts  types.ts
frontend/app/components/: AppLayout.tsx  Header.tsx  NavLink.tsx  NotificationToast.tsx  Sidebar.tsx
frontend/app/components/layout/: NavLink.tsx  Sidebar.tsx
frontend/app/features/access-log/: index.tsx
frontend/app/features/access-log/components/: LogTable.tsx
frontend/app/features/dashboard/components/: ActivityTable.tsx  CameraStream.tsx  SummaryCards.tsx
frontend/app/features/landing-page/: index.tsx
frontend/app/features/landing-page/components/: CTASection.tsx  RoomCard.tsx  RoomDetailModal.tsx
frontend/app/features/login/: api.ts  index.tsx  types.ts
frontend/app/features/resident/: api.ts  index.tsx
frontend/app/features/resident/components/: ResidentDetail.tsx  ResidentFilter.tsx  ResidentForm.tsx  (+1 more)
frontend/app/layouts/: AppLayout.tsx
frontend/app/lib/: auth.ts  realtime.ts
frontend/app/routes/: login.tsx
frontend/app/types/: index.ts
