[project]
name = "smart-stay-backend"
version = "0.1.0"
description = "Backend API for Smart-Stay access control"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "fastapi[standard]",
  "uvicorn",
  "pydantic-settings",
  "psycopg[binary]",
  "pgvector",
  "SQLAlchemy",
  "deepface",
  "tf-keras",
  "python-multipart",
  "PyJWT",
  "bcrypt",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio",
  "httpx",
  "Pillow",
  "numpy",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
